--- a/A01610836_Lab6_ValidarPasswords.html
+++ b/A01610836_Lab6_ValidarPasswords.html
@@ -36,7 +36,7 @@
             </header>
             <br>
             <label for="password">Contraseña a verificar: </label>
-            <input class="input" id="password" type="password" placeholder="Escribe aquí tu contraseña"></input><br>
+            <input class="input" id="password" type="password" placeholder="Contraseña_123"></input><br>
             <br>
             <button class="button is-primary" id="boton_verificar">Verificar contraseña</button><br><br>
             <div id="verificacion"></div>
